invoke_rapidwright: Set --add-exports where supported
Signed-off-by: gatecat <gatecat@ds0.me>